modificacion visual y de post

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,16 @@
                             placeholder="Ingrese su nombre">
                     </div>
 
+                    <div class="form-group">
+                        <input type="text" id="city" required name="city" class="form-control"
+                            placeholder="Ingrese su ciudad de residencia">
+                    </div>
+
+                    <div class="custom-file py-4">
+                        <input type="file" name="image" required class="custom-file-input" id="image">
+                        <label for="image" class="custom-file-label">Elige una imagen</label>
+                    </div>
+
                     <button class="btn btn-primary" id="btn-sentence">¡Sorprendeme! ^^</button>
                 </form>
             </div>
