--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,12 @@
                         <input type="file" name="image" required class="custom-file-input" id="image">
                         <label for="image" class="custom-file-label">Elige una imagen</label>
                     </div>
-
-                    <button class="btn btn-primary" id="btn-sentence">¡Sorprendeme! ^^</button>
+                    
+                    <button class="btn btn-primary" id="btn-sentence">¡Agregar paciente!</button>
                 </form>
             </div>
             <div>
+                <button class="btn btn-primary" id="btn-pdf">¡Generar PDF! ^^</button>
                 <div class="container-fluid col-md-12" id="sentences-div"></div>
             </div>
         </div>
